--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
                 </ul>
             </div>
         </nav>
+
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-content">
+                    
+                </div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
