create showcase html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <div id="showcase">
             <div class="container">
                 <div class="showcase-content">
-                    
+                    <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur unde dolorum maiores, numquam labore quaerat.</p>
+                    <a class="btn" href="/about.html">About Our Hotel</a>
                 </div>
             </div>
         </div>
