add info-content html

--- a/index.html
+++ b/index.html
@@ -32,5 +32,16 @@
             </div>
         </div>
     </header>
+
+    <section id="home-info" class="bg-dark">
+        <div class="info-img"></div>
+        <div class="info-content">
+            <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus dolor delectus, iure consequuntur eum magnam in alias sed ad id, similique ratione voluptatem eveniet officia sit eaque mollitia rerum esse magni aliquam quia? Ratione exercitationem quae similique delectus ut culpa.
+            </p>
+            <a href="/about.html" class="btn btn-light">Read More</a>
+        </div>
+    </section>
 </body>
 </html>
