--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to the most extraordinary hotel in Boston, Massachusetts">
     <meta name="keywords" content="hotel, boston, hotel, new england hotel">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/style.css">
     <title>Hotel BT | Welcome</title>
 </head>
@@ -41,6 +42,24 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus dolor delectus, iure consequuntur eum magnam in alias sed ad id, similique ratione voluptatem eveniet officia sit eaque mollitia rerum esse magni aliquam quia? Ratione exercitationem quae similique delectus ut culpa.
             </p>
             <a href="/about.html" class="btn btn-light">Read More</a>
+        </div>
+    </section>
+
+    <section id="features">
+        <div class="box">
+            <i class="fas fa-hotel fa-3x"></i>
+            <h3>Great Location</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, magni!</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-utensils fa-3x"></i>
+            <h3>Free Meals</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, magni!</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-dumbbell fa-3x"></i>
+            <h3>Fitness Room</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, magni!</p>
         </div>
     </section>
 </body>
