--- a/index.html
+++ b/index.html
@@ -62,5 +62,11 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, magni!</p>
         </div>
     </section>
+
+    <div class="clr"></div>
+
+    <footer id="main-footer">
+        <p>Hotel BT &copy; 2023, All Rights Reserved</p>
+    </footer>
 </body>
 </html>
