create about-info html

--- a/about.html
+++ b/about.html
@@ -23,6 +23,23 @@
         </nav>
     </header>
 
+    <section id="about-info">
+        <div class="container">
+            <div class="info-left">
+                <h1><span class="text-primary">About</span> Hotel BT</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti soluta assumenda, aliquid velit magnam exercitationem vitae iste nam quis harum fugit distinctio suscipit repudiandae quae illo eius molestias accusamus hic.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nesciunt perspiciatis ullam nostrum excepturi sequi cupiditate architecto distinctio modi fugit.
+                </p>
+            </div>
+            <div class="info-right">
+                <img src="/img/photo-2.jpg" alt="hotel">
+            </div>
+        </div>
+    </section>
+
     <footer id="main-footer">
         <p>Hotel BT &copy; 2023, All Rights Reserved</p>
     </footer>
