styling about section

--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
         </nav>
     </header>
 
-    <section id="about-info">
+    <section id="about-info" class="bg-light py-3">
         <div class="container">
             <div class="info-left">
-                <h1><span class="text-primary">About</span> Hotel BT</h1>
+                <h1 class="l-heading"><span class="text-primary">About</span> Hotel BT</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti soluta assumenda, aliquid velit magnam exercitationem vitae iste nam quis harum fugit distinctio suscipit repudiandae quae illo eius molestias accusamus hic.
                 </p>
