create and add styling to testimonials

--- a/about.html
+++ b/about.html
@@ -40,6 +40,22 @@
         </div>
     </section>
 
+    <div class="clr"></div>
+
+    <section id="testimonials" class="py-3">
+        <div class="container">
+            <h2 class="l-heading">What Our Guests Say</h2>
+            <div class="testimonial bg-primary">
+                <img src="./img/person-1.jpg" alt="Samantha">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem consectetur necessitatibus debitis, eligendi temporibus veritatis illum veniam cumque, facilis cum, distinctio architecto vel dignissimos soluta in aliquam nam. Laborum consequatur, molestias fuga sint eos recusandae facilis expedita est ab quos?</p>
+            </div>
+            <div class="testimonial bg-primary">
+                <img src="./img/person-2.jpg" alt="Jen">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem consectetur necessitatibus debitis, eligendi temporibus veritatis illum veniam cumque, facilis cum, distinctio architecto vel dignissimos soluta in aliquam nam. Laborum consequatur, molestias fuga sint eos recusandae facilis expedita est ab quos?</p>
+            </div>
+        </div>
+    </section>
+
     <footer id="main-footer">
         <p>Hotel BT &copy; 2023, All Rights Reserved</p>
     </footer>
